force-app/main/default/objects/DuplicateMergeLog__c/DuplicateMergeLog__c.object-meta.xml
<CustomObject>
    <description>Audit log for duplicate record merge operations</description>
    <label>Duplicate Merge Log</label>
    <nameField>
        <displayFormat>DML-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Merge Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>