force-app/main/default/objects/DuplicateMergeLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message if merge failed</description>
    <inlineHelpText>Contains any error messages that occurred during the merge operation</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>