force-app/main/default/objects/DuplicateMergeLog__c/fields/ErrorMessages__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessages__c</fullName>
    <description>Error messages if the merge operation failed</description>
    <inlineHelpText>Error messages if the merge operation failed</inlineHelpText>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>