force-app/main/default/objects/DuplicateMergeLog__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>ID of the batch job that performed the merge</description>
    <inlineHelpText
  >ID of the batch job that performed the merge</inlineHelpText>
    <label>Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>