force-app/main/default/objects/DuplicateMergeLog__c/fields/MasterId__c.field-meta.xml
<CustomField>
    <fullName>MasterId__c</fullName>
    <description
  >ID of the master record that was preserved during the merge</description>
    <inlineHelpText
  >ID of the master record that was preserved during the merge</inlineHelpText>
    <label>Master ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>