force-app/main/default/objects/DuplicateMergeLog__c/fields/MatchScore__c.field-meta.xml
<CustomField>
    <fullName>MatchScore__c</fullName>
    <description>Matching score for the duplicate records (0-100)</description>
    <inlineHelpText>Indicates the matching score between the duplicate records</inlineHelpText>
    <label>Match Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>