force-app/main/default/objects/DuplicateMergeLog__c/fields/MergedIds__c.field-meta.xml
<CustomField>
    <fullName>MergedIds__c</fullName>
    <description
  >JSON array of the IDs of records that were merged into the master record</description>
    <inlineHelpText
  >JSON array of the IDs of records that were merged into the master record</inlineHelpText>
    <label>Merged Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>