force-app/main/default/objects/DuplicateMergeLog__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>ID of the user who initiated or approved the merge</description>
    <inlineHelpText>ID of the user who initiated or approved the merge</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>